# bevy_mod_yarn

./: Cargo.toml  README.md  barebones.yarn  minimal.yarn  notes.md  todo.md
assets/: barebones.yarn  complex.yarn  micro.yarn  other.yarn  simple.yarn  single_node_nested_choices.yarn  two_nodes_jump_multiple_characters.yarn
assets/dialogues/: single_node_simple.yarn  single_node_simple_commands.yarn  single_node_three_characters.yarn  two_nodes_jump_nested_choices.yarn
docs/: notes.md
examples/basic/: basic.rs  commands.rs  visuals.rs
examples/bubbles/: bubbles.rs
examples/portraits/: portraits.rs
src/: lib.rs  main.rs  old.rs  structs.rs  yarn_asset.rs  yarn_loader.rs
src/evaluator/: dialogue_runner.rs  dialogue_runner_resource.rs  dialogue_tracker.rs  mod.rs
src/parser/: body copy.rs  body.rs  body_backup.rs  choices_alt.rs  common.rs  dump.rs  header.rs  mod.rs  nodes.rs  nom_supreme_yeah.rs  old.rs  structs.rs  working_choice_blocks.rs
src/parser_nom/: body.rs  choices_alt.rs  header.rs  mod.rs  nodes.rs
tests/: evaluator_test.rs  parser_test.rs  runner_test.rs  test.rs
