[package]
name = "bevy_mod_yarn"
version = "0.3.0"
edition = "2021"


[dependencies]
nom = "7.1.2"
nom-supreme = "0.8.0"
bevy = { version = "0.12", default-features = false, features = ["bevy_asset"] }

[dev-dependencies]
bevy="0.12"

[[example]]
name = "basic"
path = "examples/basic/basic.rs"

[[example]]
name = "commands"
path = "examples/basic/commands.rs"

[[example]]
name = "portraits"
path = "examples/portraits/portraits.rs"


[[example]]
name = "bubbles"
path = "examples/bubbles/bubbles.rs"